# cvae-for-molecular-design

./: .gitignore  LICENSE  README.md  env.yml  environment.yml  sample.py  setup.cfg
Bashscript/: p_sampling.sh  psca_sampling.sh  sca_sampling.sh  uc_sampling.sh
Data/: SRC.pkl  SRC_sep.pkl  TRG.pkl  TRG_sep.pkl  scaler.pkl
Inference/: __init__.py  sampler.py  utils.py
Model/: __init__.py  cvae.py  get_model.py  layers.py  vae.py
Utils/: __init__.py  field.py  gpu.py  log.py  mapper.py  metric.py  property.py  smiles.py
