[metadata]
name = cvae-for-molecular-design
version = 1.0.0
description = use property and structure constraints to design molecules by cvae.
author = chaoting-sun
author_email = chaoting0108@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    torchtext==0.6.0
    # pomegranate==0.12.0
